--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -3,4 +3,34 @@ html {
   margin: 0 auto;
   font-size: 16px;
   box-sizing: border-box;
+  text-align: center;
+}
+
+/* Header Section */
+header {
+  padding: 1rem 0.5rem;
+  height: 4rem;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  column-gap: 1rem;
+  align-content: center;
+}
+
+header h2 {
+  grid-column: 1 / 2;
+}
+
+header nav {
+  padding: 0 1rem;
+  grid-column: 2 / 3;
+}
+
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+nav li {
+  margin: 0 0.75rem;
+  display: inline-block;
 }
