--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -3,7 +3,12 @@ html {
   margin: 0 auto;
   font-size: 16px;
   box-sizing: border-box;
-  text-align: center;
+}
+
+/* Typography */
+h2 {
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 /* Header Section */
@@ -11,13 +16,19 @@ header {
   padding: 1rem 0.5rem;
   height: 4rem;
   display: grid;
+  text-transform: uppercase;
   grid-template-columns: 1fr 3fr;
   column-gap: 1rem;
   align-content: center;
 }
 
 header h2 {
+  padding-left: 2rem;
   grid-column: 1 / 2;
+}
+
+h2 span {
+  font-weight: 400;
 }
 
 header nav {
@@ -26,11 +37,14 @@ header nav {
 }
 
 nav ul {
+  height: 100%;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 nav li {
   margin: 0 0.75rem;
+  font-size: 1.2rem;
   display: inline-block;
 }
