--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -30,9 +30,21 @@ html {
 }
 
 /* Typography */
-h2 {
+h1 {
+  margin: 2rem auto;
+  font-size: 5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+h3 {
   font-size: 2rem;
   font-weight: 700;
+}
+
+h4 {
+  font-size: 1.8rem;
+  text-transform: uppercase;
 }
 
 /* Header Section */
@@ -79,7 +91,20 @@ nav li {
   }
 
   header div {
-      justify-self: center;
-      align-self: center;
+    justify-self: center;
+    align-self: center;
   }
+}
+/* Banner Section */
+.banner {
+  padding-top: 4rem;
+  height: 100vh;
+  background-image: url("../images/banner.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.content {
+  margin: 0 auto;
+  text-align: center;
 }
