--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -30,21 +30,29 @@ html {
 }
 
 /* Typography */
+h1,
+h3,
+h4,
+li {
+  text-transform: uppercase;
+}
+
+h1,
+h3 {
+  font-weight: 700;
+}
+
 h1 {
   margin: 2rem auto;
   font-size: 5rem;
-  font-weight: 700;
-  text-transform: uppercase;
 }
 
 h3 {
   font-size: 2rem;
-  font-weight: 700;
 }
 
 h4 {
   font-size: 1.8rem;
-  text-transform: uppercase;
 }
 
 /* Header Section */
@@ -52,18 +60,17 @@ header {
   padding: 1rem 0.5rem;
   height: 4rem;
   display: grid;
-  text-transform: uppercase;
   grid-template-columns: 1fr 3fr;
   column-gap: 1rem;
   align-content: center;
 }
 
-header h2 {
+header h3 {
   padding-left: 2rem;
   grid-column: 1 / 2;
 }
 
-h2 span {
+h3 span {
   font-weight: 400;
 }
 
@@ -101,10 +108,10 @@ nav li {
   height: 100vh;
   background-image: url("../images/banner.jpg");
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
 }
 
 .content {
-  margin: 0 auto;
   text-align: center;
 }
