--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -114,13 +114,14 @@ nav li {
 /* Banner Section */
 .banner img {
   max-width: 100%;
-  position: absolute;
+  position: relative;
   z-index: -4;
 }
 
 .content {
-  position: relative;
-  top: 5rem;
+  position: absolute;
+  top: 6rem;
+  left: 30%;
   text-align: center;
 }
 
@@ -128,4 +129,37 @@ nav li {
   .content {
     top: 2rem;
   }
+}
+
+/* Testimonial Section */
+.testimonial {
+  padding: 2rem 0.25rem;
+  height: fit-content;
+  display: grid;
+  grid-template: repeat(3, 1fr) / 3fr 2fr;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  align-items: center;
+}
+
+.image {
+  height: fit-content;
+  grid-area: 1 / 1 / 4 / 2;
+  overflow: hidden;
+}
+
+.testimonial img {
+  max-width: 100%;
+}
+
+#one {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#two {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+#three {
+  grid-area: 3 / 2 / 4 / 3;
 }
