--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -9,7 +9,6 @@
 
 body {
   margin: 0 auto;
-  padding: 0 1rem;
   font-size: 16px;
 }
 
@@ -29,8 +28,13 @@ body {
 /* Header Section */
 
 .top-bar {
+  margin: 0 auto;
   width: 100%;
   height: 4rem;
+  background-color: black;
+  opacity: 0.8;
+  color: aliceblue;
+  border-bottom: 1px solid black;
   position: fixed;
   z-index: 10;
 }
@@ -51,4 +55,27 @@ body {
 
 .mobile {
   display: none;
+}
+
+/* Banner Section */
+
+.banner {
+  grid-template-rows: repeat(9, 1fr);
+  position: relative;
+  top: 4rem;
+}
+
+.image {
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
+}
+
+.image img {
+  max-width: 100%;
+}
+
+.content {
+  grid-row: 2 / 4;
+  grid-column: 4 / span 6;
+  text-align: center;
 }
