--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -25,6 +25,18 @@ body {
   align-items: center;
 }
 
+/* Typography */
+
+h1 {
+  font-size: 3.6rem;
+  font-weight: 700;
+}
+
+h4 {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
 /* Header Section */
 
 .top-bar {
@@ -34,6 +46,7 @@ body {
   background-color: black;
   opacity: 0.8;
   color: aliceblue;
+  text-transform: uppercase;
   border-bottom: 1px solid black;
   position: fixed;
   z-index: 10;
@@ -78,4 +91,6 @@ body {
   grid-row: 2 / 4;
   grid-column: 4 / span 6;
   text-align: center;
+  text-transform: uppercase;
+  flex-direction: column;
 }
