--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -73,17 +73,18 @@ h4 {
 /* Banner Section */
 
 .banner {
+  margin-bottom: 1rem;
   grid-template-rows: repeat(9, 1fr);
   position: relative;
   top: 4rem;
 }
 
-.image {
+.banner .image {
   grid-row: 1 / -1;
   grid-column: 1 / -1;
 }
 
-.image img {
+.banner .image img {
   max-width: 100%;
 }
 
@@ -93,4 +94,46 @@ h4 {
   text-align: center;
   text-transform: uppercase;
   flex-direction: column;
+}
+
+/* Testimonial Section */
+
+.gallery {
+  grid-template-rows: 1fr 1fr;
+  row-gap: 0.5rem;
+  padding: 0 1rem;
+  position: relative;
+  top: 4rem;
+  justify-content: center;
+  align-items: center;
+}
+
+#left {
+  grid-row: 1 / -1;
+  grid-column: 1 / 5;
+}
+
+#top {
+  grid-row: 1 / 2;
+  grid-column: 5 / 9;
+}
+
+#bottom {
+  grid-row: 2 / 3;
+  grid-column: 5 / 9;
+}
+
+#right {
+  grid-row: 1 / -1;
+  grid-column: 9 / -1;
+}
+
+.photo {
+  justify-self: center;
+  align-self: center;
+  overflow: hidden;
+}
+
+.photo img {
+  max-width: 100%;
 }
