--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -32,6 +32,13 @@ h1 {
   font-weight: 700;
 }
 
+h2 {
+  grid-row: 1 / 2;
+  grid-column: 1 / -1;
+  justify-self: center;
+  align-self: center;
+}
+
 h4 {
   font-size: 1.4rem;
   font-weight: 600;
@@ -98,8 +105,37 @@ h4 {
 
 /* Testimonial Section */
 
+.testimonial {
+  margin: 1rem auto;
+  padding: 0 1rem;
+  grid-template-rows: repeat(4, 1fr);
+  position: relative;
+  top: 4rem;
+}
+
+.card {
+  padding: 0.5rem;
+  grid-row: 2 / 5;
+  flex-direction: column;
+}
+
+.card h6 {
+  align-self: flex-end;
+}
+
+#one {
+  grid-column: 1 / span 6;
+}
+
+#two {
+  grid-column: 7 / span 6;
+}
+
+/* Gallery Section */
+
 .gallery {
-  grid-template-rows: 1fr 1fr;
+  margin: 1rem auto;
+  grid-template-rows: 2rem 1fr 1fr;
   row-gap: 0.5rem;
   padding: 0 1rem;
   position: relative;
@@ -109,22 +145,22 @@ h4 {
 }
 
 #left {
-  grid-row: 1 / -1;
+  grid-row: 2 / -1;
   grid-column: 1 / 5;
 }
 
 #top {
-  grid-row: 1 / 2;
+  grid-row: 2 / 2;
   grid-column: 5 / 9;
 }
 
 #bottom {
-  grid-row: 2 / 3;
+  grid-row: 3 / -1;
   grid-column: 5 / 9;
 }
 
 #right {
-  grid-row: 1 / -1;
+  grid-row: 2 / -1;
   grid-column: 9 / -1;
 }
 
