--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -33,14 +33,27 @@ h1 {
 }
 
 h2 {
+  font-size: 1.6rem;
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   justify-self: center;
   align-self: center;
 }
 
-h4 {
+h3 {
   font-size: 1.4rem;
+  font-weight: 600;
+}
+
+p {
+  font-size: 0.9rem;
+  line-height: 1.2;
+  letter-spacing: 1px;
+}
+
+h6 {
+  margin: 0.5rem 0;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -108,7 +121,7 @@ h4 {
 .testimonial {
   margin: 1rem auto;
   padding: 0 1rem;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: 3rem repeat(3, 1fr);
   position: relative;
   top: 4rem;
 }
@@ -135,7 +148,7 @@ h4 {
 
 .gallery {
   margin: 1rem auto;
-  grid-template-rows: 2rem 1fr 1fr;
+  grid-template-rows: 3rem 1fr 1fr;
   row-gap: 0.5rem;
   padding: 0 1rem;
   position: relative;
