--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -95,7 +95,6 @@ h6 {
 /* Banner Section */
 
 .banner {
-  margin-bottom: 1rem;
   grid-template-rows: repeat(9, 1fr);
 }
 
@@ -119,8 +118,7 @@ h6 {
 /* Testimonial Section */
 
 .testimonial {
-  margin: 1rem auto;
-  padding: 0 1rem;
+  padding: 2rem 1rem;
   grid-template-rows: 3rem repeat(3, 1fr);
 }
 
@@ -147,11 +145,9 @@ h6 {
 /* Gallery Section */
 
 .gallery {
-  margin: 1rem auto;
+  padding: 2rem 1rem;
   grid-template-rows: 3rem 1fr 1fr;
   row-gap: 0.5rem;
-  padding: 0 1rem;
-
   justify-content: center;
   align-items: center;
 }
@@ -226,4 +222,30 @@ h6 {
   border: 0;
   border-radius: 20px;
   box-shadow: 2px 2px 25px black;
+}
+
+/* Footer Section */
+footer {
+  padding: 2rem 1rem 1rem 1rem;
+  grid-template-rows: 4rem 2rem;
+}
+
+.contact {
+  grid-row: 1 / 2;
+  grid-column: 5 / 9;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.copyright {
+  grid-row: 2 / 3;
+  grid-column: 1 / 7;
+  justify-content: flex-start;
+}
+
+.credit {
+  grid-row: 2 / 3;
+  grid-column: 7 / -1;
+  justify-content: flex-end;
 }
