--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -49,6 +49,11 @@ h3 {
   font-weight: 600;
 }
 
+h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
 p {
   font-size: 0.9rem;
   line-height: 1.2;
@@ -190,7 +195,7 @@ h6 {
 }
 
 .events {
-  padding: 2rem 1rem;
+  padding: 2rem 1rem 1rem 1rem;
   grid-row: 2 / 3;
   grid-column: 1 / -1;
   flex-wrap: wrap;
