--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-body {
+html {
   margin: 0 auto;
   font-size: 16px;
 }
@@ -27,9 +27,16 @@ body {
   align-items: center;
 }
 
+@media only screen and (max-width: 450px) {
+  html {
+    font-size: 12px;
+  }
+}
+
 /* Typography */
 
 h1 {
+  margin-bottom: 0.5rem;
   font-size: 3.6rem;
   font-weight: 700;
 }
@@ -121,6 +128,7 @@ h6 {
 }
 
 .content {
+  padding: 0.75rem;
   background-color: black;
   opacity: 0.7;
   color: aliceblue;
