--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -239,6 +239,28 @@ h6 {
   max-width: 100%;
 }
 
+@media only screen and (max-width: 450px) {
+  .gallery {
+    grid-template-rows: 3rem repeat(3, 1fr);
+  }
+
+  #left {
+    grid-area: 2 / 1 / 3 / 3;
+  }
+
+  #right {
+    grid-area: 2 / 3 / 3 / 5;
+  }
+
+  #top {
+    grid-area: 3 / 1 / 4 / -1;
+  }
+
+  #bottom {
+    grid-area: 4 / 1 / -1 / -1;
+  }
+}
+
 /* Join-Us Section */
 
 .join-us {
