--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -303,6 +303,20 @@ h6 {
   box-shadow: 2px 2px 25px black;
 }
 
+@media only screen and (max-width: 450px) {
+  .events {
+    flex-direction: column;
+  }
+
+  .events img {
+    max-width: 100%;
+  }
+
+  #middle {
+    margin: 1rem 0;
+  }
+}
+
 /* Footer Section */
 footer {
   padding: 2rem 1rem 1rem 1rem;
