--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -9,6 +9,7 @@
 
 html {
   margin: 0 auto;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
 }
 
@@ -98,6 +99,7 @@ h6 {
 
 .logo {
   padding: 1rem;
+  font-family: "Lato", sans-serif;
   grid-column: 1 / 3;
   text-align: center;
 }
