--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -9,7 +9,7 @@
 
 html {
   margin: 0 auto;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
 }
 
@@ -47,14 +47,14 @@ hr {
 /* Typography */
 
 h1 {
-  margin-bottom: 0.5rem;
-  font-size: 3.6rem;
+  margin-bottom: 1rem;
+  font-size: 2.8rem;
   font-weight: 700;
 }
 
 h2 {
   margin: 1rem 0 2rem 0;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 700;
   text-transform: uppercase;
   grid-row: 1 / 2;
@@ -64,25 +64,25 @@ h2 {
 }
 
 h3 {
-  font-size: 1.4rem;
-  font-weight: 600;
+  font-size: 1.35rem;
+  font-weight: 400;
 }
 
 h4 {
-  font-size: 1.2rem;
-  font-weight: 600;
+  font-size: 1.1rem;
+  font-weight: 500;
 }
 
 p {
-  font-size: 0.9rem;
+  font-size: 0.75rem;
   line-height: 1.2;
   letter-spacing: 1px;
 }
 
 h6 {
   margin: 0.5rem 0;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 0.9rem;
+  font-weight: 500;
 }
 
 /* Header Section */
@@ -99,9 +99,17 @@ h6 {
 
 .logo {
   padding: 1rem;
-  font-family: "Lato", sans-serif;
   grid-column: 1 / 3;
   text-align: center;
+}
+
+.logo h3 {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+.logo span {
+  font-weight: 300;
 }
 
 .desktop {
@@ -302,7 +310,7 @@ h6 {
 .btn {
   height: 3rem;
   width: 8rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-transform: uppercase;
   background-color: bisque;
   border: 0;
