--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -11,6 +11,8 @@ html {
   margin: 0 auto;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
+  background-color: #272343;
+  color: #ffffff;
 }
 
 .grid-container {
@@ -28,10 +30,10 @@ html {
 
 hr {
   margin: 0 auto;
-  width: 20%;
+  width: 15%;
   border-width: 0 0 10px 0;
   border-style: dotted;
-  border-color: grey;
+  border-color: #bae8e8;
 }
 
 @media only screen and (max-width: 450px) {
@@ -77,6 +79,7 @@ p {
   font-size: 0.75rem;
   line-height: 1.2;
   letter-spacing: 1px;
+  color: #e3f6f5;
 }
 
 h6 {
@@ -93,7 +96,7 @@ h6 {
   height: 4rem;
   background-color: black;
   opacity: 0.8;
-  color: aliceblue;
+  color: #dfdfdf;
   text-transform: uppercase;
 }
 
@@ -157,7 +160,7 @@ h6 {
   padding: 0.75rem;
   background-color: black;
   opacity: 0.7;
-  color: aliceblue;
+  color: #dfdfdf;
   grid-row: 1 / -1;
   grid-column: 4 / span 6;
   text-align: center;
@@ -181,10 +184,15 @@ h6 {
 
 .card {
   padding: 1rem;
-  background-color: blanchedalmond;
+  background-color: #e3f6f5;
   border-radius: 10px;
   grid-row: 2 / 5;
   flex-direction: column;
+}
+
+.card p,
+h6 {
+  color: #272343;
 }
 
 .card h6 {
@@ -312,10 +320,17 @@ h6 {
   width: 8rem;
   font-size: 1rem;
   text-transform: uppercase;
-  background-color: bisque;
+  background-color: #fd5e53;
+  color: #21bf73;
   border: 0;
   border-radius: 20px;
   box-shadow: 2px 2px 25px black;
+  transition: all 0.5s ease;
+}
+
+.btn:hover {
+  background-color: #21bf73;
+  color: #fd5e53;
 }
 
 @media only screen and (max-width: 450px) {
