--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -129,7 +129,8 @@ h6 {
 
 @media only screen and (max-width: 600px) {
   .mobile {
-    display: block;
+    padding-left: 1.5rem;
+    display: inline-block;
     grid-column: -3 / -1;
     align-self: center;
   }
