--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -129,10 +129,10 @@ h6 {
 
 @media only screen and (max-width: 600px) {
   .mobile {
-    padding-left: 1.5rem;
     display: inline-block;
     grid-column: -3 / -1;
     align-self: center;
+    justify-self: center;
   }
 
   .desktop {
